# Story-Agent

./: README.md
story_agent-main/backend/: app.py  config.py  pyproject.toml  requirements.txt
story_agent-main/backend/api/: ai_client.py  gemini_client.py  ollama_client.py
story_agent-main/backend/memory/: memory_manager.py
story_agent-main/backend/story/: story_manager.py
story_agent-main/backend/utils/: text_helpers.py
story_agent-main/frontend/: index.html  package.json  vite.config.js
story_agent-main/frontend/src/: App.jsx  main.jsx
story_agent-main/frontend/src/api/: storyAPI.js
story_agent-main/frontend/src/hooks/: useStory.js
story_agent-main/frontend/src/ui/components/: SidePanels.jsx  StoryPanel.jsx  WritePanel.jsx
story_agent-main/frontend/src/utils/: constants.js  textHelpers.js
